# WhiteRabbit

./: README.md  pyproject.toml  setup.py
tests/: test_remove_exif.py
whiterabbit/: __init__.py  main.py
whiterabbit/obfuscate/: noise_injector.py  pixel_shuffle.py
whiterabbit/relay/: encryptor.py  relay_client.py  relay_server.py  usage
whiterabbit/scrub/: encoder.py  exif_cleaner.py  timestamp_reset.py
whiterabbit/secure_delete/: shredder.py
whiterabbit/utils/: logger.py
whiterabbit/whiterabbit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
